# minimal-site

./: .gitignore  CLAUDE.md  MERGE_CONFLICT_RESOLUTION.md  NATIVE_PROJECTS_GUIDE.md  README.md  astro.config.mjs  build-native.sh  create-native-project.sh  create-project.sh  package-lock.json  package.json
public/webcomponents/: GreetingMessage.js
src/: consts.ts
src/components/: AboutMe.astro  BaseHead.astro  Bio.astro  Footer.astro  Gallery.tsx  Header.astro  NativeCanvas.astro  ProjectLayout.astro  Sidebar.astro  SocialLinks.astro  Work.astro
src/content/: config.ts
src/content/blog/: wasm.md
src/content/projects/: 001-fractal-trees.md  002-starfield.md
src/content/studies/: eatin.md  globant.md  kamikaze.md
src/layouts/: Studies.astro
src/native/macroquad/fractal-trees/: Cargo.toml
src/native/macroquad/fractal-trees/src/: lib.rs
src/native/macroquad/fractal-trees/threejs/: package-lock.json  package.json  vite.config.ts
src/native/macroquad/fractal-trees/threejs/src/: main.ts
src/native/macroquad/starfield/: Cargo.toml
src/native/macroquad/starfield/src/: lib.rs  main.rs
src/pages/: index.astro
src/pages/projects/: [slug].astro  index.astro
src/pages/studies/: [...slug].astro
src/styles/: global.css  utopia.css
src/types/: global.d.ts
src/utils/: sourceCodeLoader.ts
