[package]
name = "starfield"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# For native development
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
] }
console_error_panic_hook = "0.1"

[dependencies.macroquad]
version = "0.4"
optional = true

[features]
default = ["native"]
native = ["macroquad"]
